--- a/home.css
+++ b/home.css
@@ -1,50 +1,62 @@
 body{
      margin: 0px;
+    
      background-color:gainsboro;
 }
-
-.logo a{
-     text-decoration: none;
-     color: white;
-     text-transform: uppercase;
-}
 .navbar{
-    padding: 40px;
      background-color: purple;
-     list-style: none;
+     padding: 30px;
+     
 }
-.navbar label{
-     float: right;
-     display: none;
-}
+
 .navbar li{
-     list-style: none;
-     display: flex;
-    display: inline;
      float: right;
-     margin-right: 20px;
-     
-     
+     list-style: none;
 }
 .navbar li a{
      text-decoration: none;
-     color:white;
-     position: relative;
+     margin-right: 20px;
+     color: white;
+     padding-right: 20px;
+     text-align: center;
 }
-.navbar li a:before{
-     content:"" ;
-     position: absolute;
-     left: 0;
-     top: 100%;
-     width:0%;
-     height:2px;
-     background-color:black;
-     transition: all 0.7s linear;
+.navbar li:hover{
+background-color: black;
 }
-.navbar li a:hover:before{
-     width: 100%;
-     background-color: blue;
-     
+.logo a{
+     text-transform: uppercase;
+     color: white;
+     text-shadow: 2px 2px 2px;
+     text-decoration: none;
+}
+label{
+     float: right;
+     margin-right: 40px;
+     display: none;
+}
+#toggle{
+     display: none; 
+}
+/*
+responsive for navbar
+*/
+@media screen and (max-width: 550px) {
+     label{
+          display: block;
+          cursor: pointer;
+   }
+    .navbar li{
+         text-align: right;
+        width: 100%;
+         display:none;
+    }
+    .navbar li a{
+         display: block;
+         margin: 0%;
+    }
+    #toggle:checked + ul li{
+         display: block;
+    }
 }
 .container{
      text-align: center;
@@ -54,24 +66,26 @@ body{
 }
 
 .heading{
+     margin-top: 3px;
      text-align: center;
-     color: red
-     ;
+     color: red;
 }
 .portfolio{
      display: grid;
      grid-template-columns: 50% 50%;
      grid-column-gap: 4px;
      margin-top: 50px;
-}
-.portfo-container{ 
      
+}
+.portfo-container{
      padding: 4%;
-     
      background-color: aqua;
-     
-
 }
+.skill-container{
+     padding: 4%;
+     background-color: aqua;
+}
+
 .portfo-container .image{
      background-color: antiquewhite;
      padding: 4.5%;
@@ -79,12 +93,6 @@ body{
      text-align: center;
      margin-left: 30px;
      
-}
-.skill-container{
-     padding: 1.8%;
-     background-color: aqua;
-    
-
 }
 .contact{
      display: grid;
@@ -123,25 +131,4 @@ body{
 .start, .Problem, .learned{
      background-color: aqua;
      padding: 3%;
-}
-@media screen and (max-width:550px;) {
-     .navbar label{
-          display: block;
-          cursor: pointer;
-     }
-     
-     .navbar li{
-          width:100%;
-          text-align: center;
-          display: none;
-          
-     }
-     .navbar li a{
-          display: block; 
-          border-bottom: 1px solid black;
-          margin: 0%;
-     }
-     .container{flex-direction: column;}
-     h1,h2{width: 90; order: 2;}
-     
 }
